--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,10 @@
             <input id="inline-mother" type="text" inputmode="numeric" placeholder="e.g., 67890" autocomplete="off">
           </div>
           <div class="form-field">
+            <label for="inline-born">Born date (optional)</label>
+            <input id="inline-born" type="date" autocomplete="off">
+          </div>
+          <div class="form-field">
             <label for="inline-weight">Weight (kg, optional)</label>
             <input id="inline-weight" type="number" step="0.01" min="0" placeholder="e.g., 250.5" autocomplete="off">
           </div>
@@ -76,6 +80,14 @@
               <option value="dead">Dead</option>
               <option value="unknown">Unknown</option>
             </select>
+          </div>
+          <div class="form-field">
+            <label for="inline-color">Color (optional)</label>
+            <input id="inline-color" type="text" placeholder="e.g., brown/black" autocomplete="off">
+          </div>
+          <div class="form-field">
+            <label for="inline-notes-mother">Mother notes (optional)</label>
+            <input id="inline-notes-mother" type="text" placeholder="Any notes about the mother" autocomplete="off">
           </div>
           <div class="form-field">
             <label for="inline-notes">Notes (optional)</label>
