--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
         <form id="inline-add" class="form-vertical" style="margin:8px 0 12px;">
           <div class="form-field">
             <label for="inline-animal">Livestock ID</label>
-            <input id="inline-animal" type="text" inputmode="numeric" placeholder="e.g., 12345" autocomplete="off" required>
+            <input id="inline-animal" type="text" placeholder="e.g., A123-45" autocomplete="off" required>
           </div>
           <div class="form-field">
             <label for="inline-mother">Mother ID (optional)</label>
