build: change date - accept queries

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
           </div>
           <div class="form-field">
             <label for="inline-born">Nacimiento (opcional)</label>
-            <input id="inline-born" type="date" autocomplete="off">
+            <input id="inline-born" type="text" inputmode="numeric" placeholder="dd/mm/aaaa" autocomplete="off">
           </div>
           <div class="form-field">
             <label for="inline-weight">Peso (kg, opcional)</label>
