fix: weight as float

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="form-field">
             <label for="inline-mother">Madre ID (opcional)</label>
-            <input id="inline-mother" type="text" inputmode="numeric" placeholder="e.g., 67890" autocomplete="off">
+            <input id="inline-mother" type="text" placeholder="e.g., 67890" autocomplete="off">
           </div>
           <div class="form-field">
             <label for="inline-born">Nacimiento (opcional)</label>
