fix: save capital letters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,23 +67,29 @@
             <label for="inline-gender">Sexo (opcional)</label>
             <select id="inline-gender">
               <option value="">— Seleccionar —</option>
-              <option value="male">Macho</option>
-              <option value="female">Hembra</option>
-              <option value="unknown">Desconocido</option>
+              <option value="MALE">Male</option>
+              <option value="FEMALE">Female</option>
+              <option value="UNKNOWN">Unknown</option>
             </select>
           </div>
           <div class="form-field">
             <label for="inline-status">Estado (opcional)</label>
             <select id="inline-status">
               <option value="">— Seleccionar —</option>
-              <option value="alive">Vivo</option>
-              <option value="dead">Muerto</option>
-              <option value="unknown">Desconocido</option>
+              <option value="ALIVE">Alive</option>
+              <option value="DEAD">Dead</option>
+              <option value="UNKNOWN">Unknown</option>
             </select>
           </div>
           <div class="form-field">
-            <label for="inline-color">Color (opcional, ej, marrón/negro)</label>
-            <input id="inline-color" type="text" placeholder="ej, marrón/negro" autocomplete="off">
+            <label for="inline-color">Color (opcional)</label>
+            <select id="inline-color">
+              <option value="">— Seleccionar —</option>
+              <option value="COLORADO">Colorado</option>
+              <option value="MARRON">Marron</option>
+              <option value="NEGRO">Negro</option>
+              <option value="OTHERS">Others</option>
+            </select>
           </div>
           <div class="form-field">
             <label for="inline-notes-mother">Notas de la madre (opcional)</label>
