fix: sort files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
     </small>
   </footer>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="app/main.js"></script>
   <div id="toast" role="status" aria-live="polite" hidden></div>
   <dialog id="manage-synced-dialog">
     <div class="row space-between align-center">
