--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
   <link rel="apple-touch-icon" href="icons/icon-192.jpg">
   <link rel="stylesheet" href="styles.css">
   <title>Registro de Animales</title>
+  <script defer src="/_vercel/insights/script.js"></script>
+  <script defer src="/_vercel/speed-insights/script.js"></script>
 </head>
 <body>
   <header class="app-header">
