--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,78 +73,174 @@
   </main>
 
   <main class="container" id="app-screen" hidden>
-    <section class="card">
-      <div class="row space-between align-center">
-      <h2>Animales</h2>
-        <div class="row gap">
-          <button id="register-btn" class="btn primary">Registrar Nuevo</button>
-          <button id="manage-synced" class="btn">Gestionar registros…</button>
-          <button id="export-csv" class="btn">Exportar CSV</button>
-        </div>
-      </div>
+    <!-- Navigation Tabs -->
+    <div class="nav-tabs">
+      <button id="metrics-tab" class="nav-tab active">Métricas</button>
+      <button id="cows-tab" class="nav-tab">Vacas</button>
+      <button id="pigs-tab" class="nav-tab">Cerdos</button>
+    </div>
 
-      <section id="register-section" hidden>
-        <form id="inline-add" class="form-vertical" style="margin:8px 0 12px;">
-          <div class="form-field">
-            <label for="inline-animal">ID (requerido)</label>
-            <input id="inline-animal" type="text" placeholder="e.g., A123-45" autocomplete="off" required>
-          </div>
-          <div class="form-field">
-            <label for="inline-mother">Madre ID (opcional)</label>
-            <input id="inline-mother" type="text" placeholder="e.g., 67890" autocomplete="off">
-          </div>
-          <div class="form-field">
-            <label for="inline-born">Nacimiento (opcional)</label>
-            <input id="inline-born" type="text" inputmode="numeric" placeholder="dd/mm/aaaa" autocomplete="off">
-          </div>
-          <div class="form-field">
-            <label for="inline-weight">Peso (kg, opcional)</label>
-            <input id="inline-weight" type="number" step="0.01" min="0" placeholder="e.g., 250.5" autocomplete="off">
-          </div>
-          <div class="form-field">
-            <label for="inline-gender">Sexo (opcional)</label>
-            <select id="inline-gender">
-              <option value="">— Seleccionar —</option>
-              <option value="MALE">Male</option>
-              <option value="FEMALE">Female</option>
-              <option value="UNKNOWN">Unknown</option>
-            </select>
-          </div>
-          <div class="form-field">
-            <label for="inline-status">Estado (opcional)</label>
-            <select id="inline-status">
-              <option value="">— Seleccionar —</option>
-              <option value="ALIVE">Alive</option>
-              <option value="DEAD">Dead</option>
-              <option value="UNKNOWN">Unknown</option>
-            </select>
-          </div>
-          <div class="form-field">
-            <label for="inline-color">Color (opcional)</label>
-            <select id="inline-color">
-              <option value="">— Seleccionar —</option>
-              <option value="COLORADO">Colorado</option>
-              <option value="MARRON">Marron</option>
-              <option value="NEGRO">Negro</option>
-              <option value="OTHERS">Others</option>
-            </select>
-          </div>
-          <div class="form-field">
-            <label for="inline-notes-mother">Notas de la madre (opcional)</label>
-            <input id="inline-notes-mother" type="text" placeholder="Cualquier nota sobre la madre" autocomplete="off">
-          </div>
-          <div class="form-field">
-            <label for="inline-notes">Notas (opcional)</label>
-            <input id="inline-notes" type="text" placeholder="Cualquier nota" autocomplete="off">
-          </div>
+    <!-- Metrics Page -->
+    <div id="metrics-page">
+      <div id="metrics-container"></div>
+    </div>
+
+    <!-- Cows Page -->
+    <div id="cows-page" hidden>
+      <section class="card">
+        <div class="row space-between align-center">
+          <h2>Vacas</h2>
           <div class="row gap">
-            <button class="btn primary" id="inline-add-btn" type="submit" aria-label="Registrar animal">Registrar</button>
+            <button id="register-cow-btn" class="btn primary">Registrar Nueva Vaca</button>
+            <button id="manage-synced-cows" class="btn">Gestionar registros…</button>
+            <button id="export-csv-cows" class="btn">Exportar CSV</button>
           </div>
-        </form>
-      </section>
+        </div>
 
-      <ul id="records" class="list"></ul>
-    </section>
+        <!-- Registration form -->
+        <section id="register-cow-section" hidden>
+          <form id="inline-add-cow" class="form-vertical" style="margin:8px 0 12px;">
+            <input type="hidden" id="inline-animal-type" value="1">
+            <div class="form-field">
+              <label for="inline-animal-cow">ID de la Vaca (requerido)</label>
+              <input id="inline-animal-cow" type="text" placeholder="e.g., 123-45" autocomplete="off" required>
+            </div>
+            <div class="form-field">
+              <label for="inline-mother-cow">Madre ID (opcional)</label>
+              <input id="inline-mother-cow" type="text" placeholder="e.g., 67890" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-born-cow">Nacimiento (opcional)</label>
+              <input id="inline-born-cow" type="text" inputmode="numeric" placeholder="dd/mm/aaaa" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-weight-cow">Peso (kg, opcional)</label>
+              <input id="inline-weight-cow" type="number" step="0.01" min="0" placeholder="e.g., 250.5" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-gender-cow">Sexo (opcional)</label>
+              <select id="inline-gender-cow">
+                <option value="">— Seleccionar —</option>
+                <option value="MALE">Macho</option>
+                <option value="FEMALE">Hembra</option>
+                <option value="UNKNOWN">Desconocido</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="inline-status-cow">Estado (opcional)</label>
+              <select id="inline-status-cow">
+                <option value="">— Seleccionar —</option>
+                <option value="ALIVE">Vivo</option>
+                <option value="DEAD">Muerto</option>
+                <option value="UNKNOWN">Desconocido</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="inline-color-cow">Color (opcional)</label>
+              <select id="inline-color-cow">
+                <option value="">— Seleccionar —</option>
+                <option value="COLORADO">Colorado</option>
+                <option value="MARRON">Marrón</option>
+                <option value="NEGRO">Negro</option>
+                <option value="OTHERS">Otros</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="inline-notes-mother-cow">Notas de la madre (opcional)</label>
+              <input id="inline-notes-mother-cow" type="text" placeholder="Cualquier nota sobre la madre" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-notes-cow">Notas (opcional)</label>
+              <input id="inline-notes-cow" type="text" placeholder="Cualquier nota" autocomplete="off">
+            </div>
+            <div class="row gap">
+              <button class="btn primary" id="inline-add-cow-btn" type="submit" aria-label="Registrar vaca">Registrar Vaca</button>
+            </div>
+          </form>
+        </section>
+
+        <ul id="cows-records" class="list"></ul>
+      </section>
+    </div>
+
+    <!-- Pigs Page -->
+    <div id="pigs-page" hidden>
+      <section class="card">
+        <div class="row space-between align-center">
+          <h2>Cerdos</h2>
+          <div class="row gap">
+            <button id="register-pig-btn" class="btn primary">Registrar Nuevo Cerdo</button>
+            <button id="manage-synced-pigs" class="btn">Gestionar registros…</button>
+            <button id="export-csv-pigs" class="btn">Exportar CSV</button>
+          </div>
+        </div>
+
+        <!-- Registration form -->
+        <section id="register-pig-section" hidden>
+          <form id="inline-add-pig" class="form-vertical" style="margin:8px 0 12px;">
+            <input type="hidden" id="inline-animal-type-pig" value="2">
+            <div class="form-field">
+              <label for="inline-animal-pig">ID del Cerdo (requerido)</label>
+              <input id="inline-animal-pig" type="text" placeholder="e.g., 123-45" autocomplete="off" required>
+            </div>
+            <div class="form-field">
+              <label for="inline-mother-pig">Madre ID (opcional)</label>
+              <input id="inline-mother-pig" type="text" placeholder="e.g., 67890" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-born-pig">Nacimiento (opcional)</label>
+              <input id="inline-born-pig" type="text" inputmode="numeric" placeholder="dd/mm/aaaa" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-weight-pig">Peso (kg, opcional)</label>
+              <input id="inline-weight-pig" type="number" step="0.01" min="0" placeholder="e.g., 50.5" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-gender-pig">Sexo (opcional)</label>
+              <select id="inline-gender-pig">
+                <option value="">— Seleccionar —</option>
+                <option value="MALE">Macho</option>
+                <option value="FEMALE">Hembra</option>
+                <option value="UNKNOWN">Desconocido</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="inline-status-pig">Estado (opcional)</label>
+              <select id="inline-status-pig">
+                <option value="">— Seleccionar —</option>
+                <option value="ALIVE">Vivo</option>
+                <option value="DEAD">Muerto</option>
+                <option value="UNKNOWN">Desconocido</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="inline-color-pig">Color (opcional)</label>
+              <select id="inline-color-pig">
+                <option value="">— Seleccionar —</option>
+                <option value="ROSA">Rosa</option>
+                <option value="NEGRO">Negro</option>
+                <option value="BLANCO">Blanco</option>
+                <option value="MARRON">Marrón</option>
+                <option value="OTHERS">Otros</option>
+              </select>
+            </div>
+            <div class="form-field">
+              <label for="inline-notes-mother-pig">Notas de la madre (opcional)</label>
+              <input id="inline-notes-mother-pig" type="text" placeholder="Cualquier nota sobre la madre" autocomplete="off">
+            </div>
+            <div class="form-field">
+              <label for="inline-notes-pig">Notas (opcional)</label>
+              <input id="inline-notes-pig" type="text" placeholder="Cualquier nota" autocomplete="off">
+            </div>
+            <div class="row gap">
+              <button class="btn primary" id="inline-add-pig-btn" type="submit" aria-label="Registrar cerdo">Registrar Cerdo</button>
+            </div>
+          </form>
+        </section>
+
+        <ul id="pigs-records" class="list"></ul>
+      </section>
+    </div>
   </main>
 
   <footer class="footer">
