build: include search tab

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,6 +78,8 @@
       <button id="metrics-tab" class="nav-tab active">Métricas</button>
       <button id="cows-tab" class="nav-tab">Vacas</button>
       <button id="pigs-tab" class="nav-tab">Cerdos</button>
+      <button id="search-tab" class="nav-tab">Buscar</button>
+      <button id="objectives-tab" class="nav-tab">Objetivos</button>
     </div>
 
     <!-- Metrics Page -->
@@ -239,6 +241,33 @@
         </section>
 
         <ul id="pigs-records" class="list"></ul>
+      </section>
+    </div>
+
+    <!-- Search Page -->
+    <div id="search-page" hidden>
+      <section class="card">
+        <div class="row space-between align-center">
+          <h2>Buscar Animales</h2>
+        </div>
+
+        <!-- Search interface -->
+        <div id="search-interface-container"></div>
+
+        <!-- Search results -->
+        <div id="search-results-container"></div>
+      </section>
+    </div>
+
+    <!-- Objectives Page -->
+    <div id="objectives-page" hidden>
+      <section class="card">
+        <div class="row space-between align-center">
+          <h2>Objetivos del Año</h2>
+        </div>
+
+        <!-- Objectives content will be rendered here -->
+        <div id="objectives-container"></div>
       </section>
     </div>
   </main>
