fix: center nav bar - register new animal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
         <div class="row space-between align-center">
           <h2>Vacas</h2>
           <div class="row gap">
-            <button id="register-cow-btn" class="btn primary">Registrar Nueva Vaca</button>
+            <button id="register-cow-btn" class="btn primary">Registrar Nuevo Animal</button>
             <button id="manage-synced-cows" class="btn">Gestionar registros…</button>
             <button id="export-csv-cows" class="btn">Exportar CSV</button>
           </div>
@@ -132,7 +132,7 @@
               <label for="inline-status-cow">Estado (opcional)</label>
               <select id="inline-status-cow">
                 <option value="">— Seleccionar —</option>
-                <option value="ALIVE">Vivo</option>
+                <option value="ALIVE" selected>Vivo</option>
                 <option value="DEAD">Muerto</option>
                 <option value="UNKNOWN">Desconocido</option>
               </select>
@@ -142,7 +142,6 @@
               <select id="inline-color-cow">
                 <option value="">— Seleccionar —</option>
                 <option value="COLORADO">Colorado</option>
-                <option value="MARRON">Marrón</option>
                 <option value="NEGRO">Negro</option>
                 <option value="OTHERS">Otros</option>
               </select>
@@ -210,7 +209,7 @@
               <label for="inline-status-pig">Estado (opcional)</label>
               <select id="inline-status-pig">
                 <option value="">— Seleccionar —</option>
-                <option value="ALIVE">Vivo</option>
+                <option value="ALIVE" selected>Vivo</option>
                 <option value="DEAD">Muerto</option>
                 <option value="UNKNOWN">Desconocido</option>
               </select>
