fix: remove pigs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,7 +77,7 @@
     <div class="nav-tabs">
       <button id="metrics-tab" class="nav-tab active">Métricas</button>
       <button id="cows-tab" class="nav-tab">Vacas</button>
-      <button id="pigs-tab" class="nav-tab">Cerdos</button>
+      <!-- <button id="pigs-tab" class="nav-tab">Cerdos</button> -->
       <button id="search-tab" class="nav-tab">Buscar</button>
       <button id="objectives-tab" class="nav-tab">Objetivos</button>
     </div>
@@ -165,6 +165,7 @@
     </div>
 
     <!-- Pigs Page -->
+    <!--
     <div id="pigs-page" hidden>
       <section class="card">
         <div class="row space-between align-center">
@@ -242,6 +243,7 @@
         <ul id="pigs-records" class="list"></ul>
       </section>
     </div>
+    -->
 
     <!-- Search Page -->
     <div id="search-page" hidden>
