build: include father id

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,6 +112,10 @@
               <input id="inline-mother-cow" type="text" placeholder="e.g., 67890" autocomplete="off">
             </div>
             <div class="form-field">
+              <label for="inline-father-cow">Padre ID (opcional)</label>
+              <input id="inline-father-cow" type="text" placeholder="e.g., Repaso, 2399" autocomplete="off">
+            </div>
+            <div class="form-field">
               <label for="inline-born-cow">Nacimiento (opcional)</label>
               <input id="inline-born-cow" type="date" autocomplete="off">
             </div>
