build: include config page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0f766e">
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icons/icon-192.jpg" sizes="192x192">
-  <link rel="apple-touch-icon" href="icons/icon-192.jpg">
+  <link rel="icon" href="icon-192.jpg" sizes="192x192">
+  <link rel="apple-touch-icon" href="icon-192.jpg">
   <link rel="stylesheet" href="styles.css">
   <title>Counter farm</title>
   <script defer src="/_vercel/insights/script.js"></script>
@@ -79,7 +79,7 @@
       <button id="cows-tab" class="nav-tab">Vacas</button>
       <!-- <button id="pigs-tab" class="nav-tab">Cerdos</button> -->
       <button id="search-tab" class="nav-tab">Buscar</button>
-      <button id="objectives-tab" class="nav-tab">Objetivos</button>
+      <button id="objectives-tab" class="nav-tab">Configuración</button>
     </div>
 
     <!-- Metrics Page -->
@@ -268,7 +268,7 @@
     <div id="objectives-page" hidden>
       <section class="card">
         <div class="row space-between align-center">
-          <h2>Objetivos del Año</h2>
+          <h2>Configuración</h2>
         </div>
 
         <!-- Objectives content will be rendered here -->
