fix: change name - Contando Vacas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="icon-192.jpg" sizes="192x192">
   <link rel="apple-touch-icon" href="icon-192.jpg">
   <link rel="stylesheet" href="styles.css">
-  <title>Counter farm</title>
+  <title>Contando vacas</title>
   <script defer src="/_vercel/insights/script.js"></script>
   <script defer src="/_vercel/speed-insights/script.js"></script>
   <!-- Configuration -->
@@ -34,7 +34,7 @@
 </head>
 <body>
   <header class="app-header">
-    <h1>Counter farm <small id="pending-count" class="muted" style="font-size:12px; margin-left:8px;"></small></h1>
+    <h1>Contando vacas <small id="pending-count" class="muted" style="font-size:12px; margin-left:8px;"></small></h1>
     <div style="display:flex; align-items:center; gap:12px;">
       <span class="badge" id="status-badge">Offline</span>
       <button id="signout-btn" class="btn" style="display:none; padding:6px 12px; font-size:12px;">Cerrar Sesión</button>
@@ -44,7 +44,7 @@
   <main class="container" id="auth-screen" hidden>
     <section class="card" style="max-width:400px; margin:2rem auto;">
       <div style="text-align:center; margin-bottom:2rem;">
-        <h2 style="margin:0 0 0.5rem 0; color:#0f766e;">Counter farm</h2>
+        <h2 style="margin:0 0 0.5rem 0; color:#0f766e;">Contando vacas</h2>
         <p class="muted">Inicia sesión para continuar</p>
       </div>
       
