feat: include insemination round id - drop down - table

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,6 +137,12 @@
               <input id="inline-scrotal-circumference-cow" type="number" step="0.1" min="0" max="100" placeholder="e.g., 35.5" autocomplete="off">
             </div>
             <div class="form-field">
+              <label for="inline-insemination-id-cow">ID de Inseminación (opcional)</label>
+              <select id="inline-insemination-id-cow">
+                <option value="">— Seleccionar —</option>
+              </select>
+            </div>
+            <div class="form-field">
               <label for="inline-status-cow">Estado (opcional)</label>
               <select id="inline-status-cow">
                 <option value="">— Seleccionar —</option>
