fix: reset password send email

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
           <input id="auth-email" name="email" type="email" placeholder="Email" required autocomplete="email" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:6px; font-size:16px;">
         </div>
         <div class="form-field">
-          <input id="auth-password" name="password" type="password" placeholder="Contraseña" required autocomplete="current-password" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:6px; font-size:16px;">
+          <input id="auth-password" name="password" type="password" placeholder="Contraseña" autocomplete="current-password" style="width:100%; padding:12px; border:1px solid #ddd; border-radius:6px; font-size:16px;">
         </div>
         
         <button type="submit" class="btn primary" id="signin-btn" style="width:100%; padding:12px; margin:8px 0; font-size:16px; background:#0f766e; border:none; border-radius:6px; color:white; cursor:pointer;">
